# contract-analysis-ai

./: .dockerignore  Dockerfile  README.md  pyproject.toml
app/api/: routes.py  schema.py
app/core/: config.py  model_loader.py
app/static/: app.js  index.html
contract-ai/: .env.example  .gitignore
contract-ai/app/: main.py
contract-ai/app/core/: model_loader.py
contract-ai/app/services/: inference.py  pdf_parser.py  preprocessing.py  training.py
contract-ai/app/static/: app.js  index.html  style.css
contract-ai/notebooks/: local_training.ipynb
contract-ai/scripts/: import_model.py
models/: label_map.json
notebooks/: colab_training.ipynb  local_training.ipynb
