[project]
name = "contract-ai"
version = "1.0.0"
description = "Production-ready contract clause classification API using fine-tuned DistilBERT"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["nlp", "contract-analysis", "distilbert", "fastapi", "legal-ai"]

dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "evaluate>=0.4.6",
    "fastapi>=0.135.3",
    "peft>=0.18.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2.2",
    "python-multipart>=0.0.12",
    "scikit-learn>=1.7.2",
    "seqeval>=1.2.2",
    "torch>=2.11.0",
    "transformers>=4.40.0",
    "uvicorn[standard]>=0.43.0",
]

[project.scripts]
serve = "app.main:app"
train = "app.services.training:run_training"

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8",
    "pytest-asyncio>=0.25",
]


